Added annotations to controller
