# api/src/types/UserType.type.ts
@@ -1,0 +1,8 @@
+export type IUser =  {
+  email: string;
+  name: string;
+  updatedAt: Date;
+  createdAt : Date;
+}
+
+export type UserCreationBody = Pick<IUser, "email" | "name">
